[package]

	name = "btrfs"
	description = "Interface for BTRFS ioctls etc"
	license = "MIT"

	version = "1.2.1"

	authors = [
		"James Pharaoh <james@wellbehavedsoftware.com>",
	]

	include = [
		"src/**/*.rs",
		"Cargo.toml",
		"README.md",
	]

[dependencies]

	crc = "1.4"
	flate2 = "0.2"
	nix = "0.8.1"
	lazy_static = "0.2"
	libc = "0.2"
	minilzo = "0.1"
	uuid = "0.3"

# noet ts=4 filetype=toml
